# django_portofolio_onrender

./: db.sqlite3  pyproject.toml  render.yaml
portfolio/: settings.py  urls.py
render/: models.py
render/migrations/: 0001_initial.py
