[tool.poetry]
name = "portfolio"
version = "0.1.0"
description = ""
authors = ["Roberto Ochoa <oc_005@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.1.2"
Pillow = "^9.2.0"
dj-database-url = "^1.0.0"
psycopg2-binary = "^2.9.4"
whitenoise = "^6.2.0"
Brotli = "^1.0.9"
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
